# Backtrack-Native

./: .gitignore  CMakeLists.txt
backtrack/: CMakeLists.txt
backtrack/src/: args.cpp  args.h  configuration.cpp  configuration.h  filecollector.cpp  filecollector.h  main.cpp
btalib/: CMakeLists.txt
btalib/src/: archive.cpp  archive.h  btaheader.h  compressionprovider.h  fileheader.h  path.cpp  path.h  zlibcompression.cpp  zlibcompression.h
docs/: bta_file_format_v1.txt
lib/zlib/: CMakeLists.txt
